--- a/main.css
+++ b/main.css
@@ -25,12 +25,18 @@ html {
     --grey-light: #efefef;
     --grey-lightest: #f8f8f8;
 
-    --green: #296448;
+    --green: #1b563b;
+    /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0*/
+
     --green-light: #368661;
     /* 368661 projects 296448*/
 
     --AMBlue: #5384ED;
-    --WS-Blue: #2AA5F3;
+    --WS-Blue: #35B9C5;
+        /* 2AA5F3*/
+
+    --WS-Teal: #35B9C5;
+    --WS-Teal-light: #f3f4f4;
 
     --seer-purple: #6956E5;
 
@@ -318,7 +324,7 @@ h5, h6 {
 }
 
 
-.allCaps{
+.allCaps {
     text-transform: uppercase;
 }
 
@@ -539,11 +545,11 @@ input {
     height: 50px;
     padding: 0 16px;
     background: var(--white);
-    border: 1px solid var(--black);
-    font-size: 15px;
+    border: 1px solid var(--black-less);
+    font-size: 16px;
     border-radius: 3px;
     outline: none;
-    box-shadow: 4px 4px 0px var(--grey-darkest);
+    box-shadow: 4px 4px 0px var(--green);
 }
 
 .input-field button {
@@ -564,7 +570,7 @@ input {
 
 button.passwordArr {
     padding: 0;
-    margin-top: -2em;
+    margin-top: -1.9em;
 }
 
 .pwIncorrectHeight {
@@ -886,6 +892,10 @@ button.passwordArr {
         width: 80vw;
     }
 
+    body .blankMin1080 {
+        height: 3.6rem;
+    }
+
     body .blankHS {
         height: 1.5rem;
     }
@@ -1062,6 +1072,9 @@ button.passwordArr {
 
 @media all and (max-width: 680px) {
 
+    body h1 {
+        font-size: 1.6em;
+    }
 
     body .heightS {
         height: auto;
@@ -1532,6 +1545,10 @@ input:checked~label {
     border-right: solid 4px var(--APPOINTA-blue);
 }
 
+input:checked~label.WS {
+    color: var(--WS-Teal);
+    border-right: solid 4px var(--WS-Teal);
+}
 
 /* ============== End Testimonial Flexbox ============= */
 
@@ -1680,9 +1697,8 @@ input:checked~label {
 
 .logo {
     padding: 1em;
-
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 400;
     /* margin-right: 8%; */
     color: var(--black);
 }
@@ -1823,6 +1839,16 @@ a.nav-link:hover {
     background-color: var(--green);
 }
 
+.bar.APPOINTA {
+    background-color: var(--APPOINTA-blue);
+}
+
+
+.bar.SEER {
+    background-color: var(--seer-purple);
+}
+
+
 .bar:nth-child(1) {
     width: 100%;
 }
@@ -1921,10 +1947,19 @@ a.nav-link:hover {
     color: var(--APPOINTA-blue);
 }
 
+.colorSEER {
+    color: var(--seer-purple);
+}
+
 .colorWS {
     color: var(--WS-Blue);
 }
-
+.colorWSBG {
+    background-color: var(--WS-Teal-light);
+}
+.colorBlack {
+    color: var(--black);
+}
 
 .colorGreen {
     color: var(--green);
@@ -2170,7 +2205,7 @@ a.nav-link:hover {
 .lineHorizS {
     display: block;
     margin: 0;
-    height: 2px;
+    height: 3px;
     width: 30px;
     background-color: var(--green-light);
     border-radius: 20px;
@@ -2811,7 +2846,7 @@ a:link.textProject {
 }
 
 .active a {
-    font-weight: 500;
+    font-weight: 400;
     color: var(--black);
 }
 
