--- a/main.css
+++ b/main.css
@@ -286,18 +286,18 @@ h1, h2 {
     margin: 0;
 }
 
-h3, h4 {
+h3, h4, h5 {
     font-family: inherit;
     font-weight: 300;
-    margin: 1.2em 0;
+    margin: 0 0 0.8em;
 
 }
 
-h5, h6 {
+h6 {
     font-family: inherit;
     font-weight: 300;
     color: var(--grey-darkest);
-    margin: 1em 0;
+    margin: 0 0 0.4em;
 
 }
 
@@ -2204,7 +2204,7 @@ a.nav-link:hover {
 
 .lineHorizS {
     display: block;
-    margin: 0;
+    margin: 0 0 0.6em;
     height: 3px;
     width: 30px;
     background-color: var(--green-light);
