--- a/main.css
+++ b/main.css
@@ -37,16 +37,16 @@ html {
     /* 2AA5F3*/
 
     --WS-Teal: #35B9C5;
-    --WS-Teal-lighter:#D4F1F3;
+    --WS-Teal-lighter: #D4F1F3;
     --WS-Teal-light: #f3f4f4;
-    --WS-lightBG: rgba(243,250,253,0.4);
+    --WS-lightBG: rgba(243, 250, 253, 0.4);
 
     --seer-purpleDark: #1513A0;
 
     --seer-purple: #605DEC;
     --seer-purpleLighter: #BCBAF7;
     --seer-purpleLightest: #F6F6FE;
-    --seer-purpleLightest1: rgba(246,246,254,0.4);
+    --seer-purpleLightest1: rgba(246, 246, 254, 0.4);
     --alpha: 0.8;
 
 
@@ -55,7 +55,7 @@ html {
     --APPOINTA-blueLightest: #f5f8ff;
 
     --APPOINTA-bg: #f5f8fa;
-    --White-transparent: rgba(255,255,255,0.6);
+    --White-transparent: rgba(255, 255, 255, 0.6);
 
 
     ---testing-hover: #e4fff3;
@@ -378,6 +378,9 @@ h6 {
     text-transform: uppercase;
 }
 
+.strikethrough {
+    text-decoration: line-through;
+}
 
 
 h1 {
@@ -519,9 +522,14 @@ hr {
     margin-bottom: 1em;
     transition: background-color 0.3s ease;
     border-radius: 3px;
-
 }
 
+.elementButton {
+    padding: 0.8em 0;
+    margin-bottom: 1em;
+    transition: background-color 0.3s ease;
+    border-radius: 3px;
+}
 
 .elementInner {
     padding: 2em;
@@ -2061,9 +2069,11 @@ a.active.SEER {
 .colorAPPOINTABg {
     background-color: var(--White-transparent);
 }
+
 .colorAPPOINTABgBlue {
     background-color: var(--APPOINTA-blueLightest);
 }
+
 polygon {
     fill: var(--seer-purple);
 }
@@ -2087,9 +2097,11 @@ polygon {
 .colorSEERBG {
     background-color: var(--seer-purpleLightest1);
 }
+
 .colorWSmobileBG {
     background-color: var(--WS-lightBG);
 }
+
 .colorWS {
     color: var(--WS-Blue);
 }
@@ -2260,6 +2272,12 @@ polygon {
 .blankVer {
     border-left: 0px solid gray;
     width: 8rem;
+
+}
+
+.blankVerS {
+    border-left: 0px solid gray;
+    width: 4rem;
 
 }
 
@@ -2841,6 +2859,21 @@ polygon {
 
 /* width and height */
 
+.intro-logo {
+    margin: 0.6em;
+    padding: 18px;
+    border-radius: 50%;
+
+    width: 2.6em;
+    height: auto;
+    cursor: pointer;
+}
+
+.intro-logo:hover {
+    padding: 18px;
+    border-radius: 50%;
+    background-color: var(--grey-light);
+}
 
 
 .widthLogo {
@@ -3468,6 +3501,206 @@ body .carousel .carousel-item {
     width: 13%;
 }
 
+.button1 {
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+    font-size: 22px;
+    padding: 8px 16px;
+}
+
+/* CSS */
+.button-35 {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+    box-sizing: border-box;
+    color: #121212;
+    cursor: pointer;
+    display: inline-flex;
+    flex: 1 1 auto;
+    font-family: Inter, sans-serif;
+    font-size: 1.2rem;
+    font-weight: 700;
+    justify-content: center;
+    line-height: 1;
+    margin: 0;
+    outline: none;
+    padding: 1rem 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow .2s, -webkit-box-shadow .2s;
+    white-space: nowrap;
+    border: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-35:hover {
+    box-shadow: var(--black) 0 0 0 1px, transparent 0 0 0 0;
+}
+
+
+
+
+/* CSS */
+.button-55 {
+    align-self: center;
+    background-color: var(--grey-lightest);
+    background-image: none;
+    background-position: 0 90%;
+    background-repeat: repeat no-repeat;
+    background-size: 4px 3px;
+    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+    border-width: 2px;
+    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+    box-sizing: border-box;
+    color: #41403e;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 2rem;
+    font-weight: 100;
+    line-height: 3rem;
+    outline: none;
+    padding: .75rem;
+    text-decoration: none;
+    transition: all 235ms ease-in-out;
+
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-55:hover {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+    transform: translate3d(0, 2px, 0);
+}
+
+.button-55:focus {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+
+
+/* CSS */
+.button-46 {
+    align-items: center;
+    background-color: rgba(240, 240, 240, 0.26);
+    border: 1px solid #DFDFDF;
+    border-radius: 16px;
+    box-sizing: border-box;
+    color: #000000;
+    cursor: pointer;
+    display: flex;
+    font-family: Inter, sans-serif;
+    font-size: 18px;
+    justify-content: center;
+    line-height: 28px;
+    max-width: 100%;
+    padding: 14px 22px;
+    text-decoration: none;
+    transition: all .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+}
+
+.button-46:active,
+.button-46:hover {
+    outline: 0;
+}
+
+.button-46:hover {
+    background-color: #FFFFFF;
+    border-color: rgba(0, 0, 0, 0.19);
+}
+
+@media (min-width: 768px) {
+    .button-46 {
+        font-size: 20px;
+        min-width: 200px;
+        padding: 14px 16px;
+    }
+}
+
+/* CSS */
+.button-86 {
+    all: unset;
+    width: 100px;
+    height: 30px;
+    font-size: 16px;
+    background: transparent;
+    border: none;
+    position: relative;
+    color: #f0f0f0;
+    cursor: pointer;
+    z-index: 1;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -99999;
+    transition: all .4s;
+}
+
+.button-86::before {
+    transform: translate(0%, 0%);
+    width: 100%;
+    height: 100%;
+    background: var(--black);
+    border-radius: 10px;
+}
+
+.button-86::after {
+    transform: translate(10px, 10px);
+    width: 35px;
+    height: 35px;
+    background: #ffffff15;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 50px;
+}
+
+.button-86:hover::before {
+    transform: translate(5%, 20%);
+    width: 110%;
+    height: 110%;
+}
+
+.button-86:hover::after {
+    border-radius: 10px;
+    transform: translate(0, 0);
+    width: 100%;
+    height: 100%;
+}
+
+.button-86:active::after {
+    transition: 0s;
+    transform: translate(0, 5%);
+}
+
+@media (min-width: 768px) {
+    .button-46 {
+        font-size: 20px;
+        min-width: 200px;
+        padding: 14px 16px;
+    }
+}
 
 button {
     background-color: Transparent;
