--- a/main.css
+++ b/main.css
@@ -525,7 +525,6 @@ hr {
 }
 
 .elementButton {
-    padding: 0.8em 0;
     margin-right: 1.6em;
     transition: background-color 0.3s ease;
     border-radius: 3px;
@@ -3516,61 +3515,25 @@ body .carousel .carousel-item {
 }
 
 /* CSS */
-.button-35 {
-    align-items: center;
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
-    box-sizing: border-box;
-    color: #121212;
-    cursor: pointer;
-    display: inline-flex;
-    flex: 1 1 auto;
-    font-family: Inter, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 700;
-    justify-content: center;
-    line-height: 1;
-    margin: 0;
-    outline: none;
-    padding: 1rem 1.2rem;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow .2s, -webkit-box-shadow .2s;
-    white-space: nowrap;
-    border: 0;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-
-.button-35:hover {
-    box-shadow: var(--black) 0 0 0 1px, transparent 0 0 0 0;
-}
-
-
-
-
-/* CSS */
 .button-55 {
-    border: solid 1px var(--black-less);
-    border-radius: 0.4em;
+    border-radius: 1em;
     align-self: center;
     background-color: var(--white);
     background-image: none;
     background-position: 0 90%;
     background-repeat: repeat no-repeat;
     background-size: 4px 3px;
-    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     box-sizing: border-box;
     color: var(--black);
     cursor: pointer;
     display: inline-block;
-    font-size: 1.6rem;
-    font-weight: 100;
+    font-size: 1.8rem;
+    font-family: inherit;
+    font-weight: 300;
     line-height: 3rem;
     outline: none;
-    padding: 0.45em 0.25em;
+    padding: 0.45em 18px;
     text-decoration: none;
     transition: all 235ms ease-in-out;
     user-select: none;
@@ -3579,48 +3542,12 @@ body .carousel .carousel-item {
 }
 
 .button-55:hover {
-    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     transform: translate3d(0, 2px, 0);
 }
 
 .button-55:focus {
     box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-}
-
-
-
-/* CSS */
-.button-46 {
-    align-items: center;
-    background-color: rgba(240, 240, 240, 0.26);
-    border: 1px solid #DFDFDF;
-    border-radius: 16px;
-    box-sizing: border-box;
-    color: #000000;
-    cursor: pointer;
-    display: flex;
-    font-family: Inter, sans-serif;
-    font-size: 18px;
-    justify-content: center;
-    line-height: 28px;
-    max-width: 100%;
-    padding: 14px 22px;
-    text-decoration: none;
-    transition: all .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 100%;
-}
-
-.button-46:active,
-.button-46:hover {
-    outline: 0;
-}
-
-.button-46:hover {
-    background-color: #FFFFFF;
-    border-color: rgba(0, 0, 0, 0.19);
 }
 
 @media (min-width: 768px) {
