--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ html {
     --SiteWide: #202020;
     /* #296448, 6eacd9, 0762ff,4f3cc9 88c5f0 current green 1b563b*/
 
-    --SiteWide-light: #368661;
+    --SiteWide-light: #AAD9D9;
     /* 368661 projects 296448*/
 
     --AMBlue: #5384ED;
@@ -487,7 +487,20 @@ hr {
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
 }
-
+.elementCard.APPOINTA:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--APPOINTA-blue);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
+.elementCard.SEER:hover {
+    cursor: pointer;
+    border-bottom: 5px solid var(--seer-purple);
+    transition: all 0.25s ease-in;
+    /*  opacity: 1.0;
+    filter: alpha(opacity=100);*/
+}
 .elementCard:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--SiteWide-light);
@@ -2877,7 +2890,7 @@ polygon {
 .intro-logo:hover {
     padding: 18px;
     border-radius: 50%;
-    background-color: var(--grey-light);
+    background-color: var(--grey-lightest);
 }
 
 
