--- a/main.css
+++ b/main.css
@@ -2494,9 +2494,9 @@ polygon {
 
 .t-me {
     font-family: 'Lato', sans-serif;
-    font-size: 2.3em;
+    font-size: 1.6em;
     margin-left: 0px;
-    line-height: 1.6;
+    line-height: 1.8em;
 }
 
 .t-intro {
