--- a/main.css
+++ b/main.css
@@ -487,6 +487,7 @@ hr {
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
 }
+
 .elementCard.APPOINTA:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--APPOINTA-blue);
@@ -494,6 +495,7 @@ hr {
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
 }
+
 .elementCard.SEER:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--seer-purple);
@@ -501,6 +503,7 @@ hr {
     /*  opacity: 1.0;
     filter: alpha(opacity=100);*/
 }
+
 .elementCard:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--SiteWide-light);
@@ -1150,7 +1153,6 @@ button.passwordArr {
 
 
 @media all and (max-width: 680px) {
-
     body h1 {
         font-size: 1.6em;
     }
@@ -1581,6 +1583,7 @@ input:checked~.content-test {
 }
 
 @media (min-width: 480px) {
+
     body .flex-container.BP {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
@@ -1986,6 +1989,10 @@ a.active.SEER {
 /* from responsive hamburger menu*/
 
 @media screen and (max-width: 480px) {
+
+
+
+
     a.nav-link {
         padding: 0.75rem 0;
     }
@@ -2024,6 +2031,7 @@ a.active.SEER {
     body .footer-logo:hover {
         padding: 6px;
     }
+
 
 }
 
@@ -2082,6 +2090,10 @@ a.active.SEER {
 
 .colorAPPOINTA {
     color: var(--APPOINTA-blue);
+}
+
+.colorAPPOINTALt {
+    color: var(--APPOINTA-blueLighter);
 }
 
 .colorAPPOINTABg {
@@ -2525,6 +2537,24 @@ polygon {
     transform: translate(-50%, -50%);
 }
 
+.ProjectBanner {
+    position: relative;
+    text-align: center;
+}
+
+.ProjectBannerInner {
+    position: absolute;
+    bottom: -60;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.ProjectBannerInner1 {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .divider {
     width: 1px;
     /* weight */
@@ -2902,6 +2932,11 @@ polygon {
 .IconSH {
     height: 1.8rem;
     margin: 2px;
+}
+
+.IconXS {
+    height: 1.2rem;
+    margin: 1px;
 }
 
 .IconS {
@@ -3560,7 +3595,7 @@ body .carousel .carousel-item {
 }
 
 .button-55:focus {
-    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
 }
 
 @media (min-width: 768px) {
