--- a/main.css
+++ b/main.css
@@ -67,6 +67,13 @@ html {
     --testing-font: #b5b5c3;
 }
 
+.displayNonePhone {
+    display: block;
+}
+.displayNoneDesktop {
+    display: none;
+}
+
 section {
     margin: 0;
     padding: 0;
@@ -860,6 +867,7 @@ button.passwordArr {
 
 /* changed media query from 800 to 1000*/
 
+
 @media all and (max-width: 1080px) {
     .font300-1080 {
         font-weight: 300 !important;
@@ -913,7 +921,9 @@ button.passwordArr {
     body .displayNonePhone {
         display: none;
     }
-
+    body .displayNoneDesktop {
+        display: block;
+    }
 
     body .footer {
         height: 90px;
@@ -1155,7 +1165,7 @@ button.passwordArr {
 
 @media all and (max-width: 680px) {
     .blankPhone {
-        height: 6rem;
+        height: 3.8rem;
     }
 
     body h1 {
