--- a/main.css
+++ b/main.css
@@ -699,12 +699,18 @@ button.passwordArr {
 
 .arrButton:after {
     content: "";
-    background-image: url("icon/arrow-forward.svg");
-    height: 1.2rem;
-    width: 1.2rem;
+    background-image: url("icon/button-arrow-right.svg");
+    height: 1.2em;
+    width: 1.2em;
     float: right;
 }
-
+.arrButtonResume:after {
+    content: "";
+    background-image: url("icon/button-link.svg");
+    height: 1.2em;
+    width: 1.2em;
+    float: right;
+}
 
 .arrCard:after {
     content: "";
@@ -3723,7 +3729,7 @@ body .carousel .carousel-item {
 
 
 
-.button-55 {
+.buttonLanding {
     border-radius: 0.6em;
     align-self: center;
     background-color: var(--white);
@@ -3736,10 +3742,10 @@ body .carousel .carousel-item {
     color: var(--black);
     cursor: pointer;
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 1.2em;
     font-family: inherit;
     font-weight: 400;
-    line-height: 1.1rem;
+    line-height: 1.2em;
     outline: none;
     padding: 16px 32px;
     text-decoration: none;
@@ -3750,13 +3756,13 @@ body .carousel .carousel-item {
     margin: 12px;
 }
 
-.button-55:hover {
+.buttonLanding:hover {
     box-shadow: rgba(63, 63, 63, 0.2) 0px 2px 8px 0px;
     transform: translate3d(0, 2px, 0);
 }
 
-.button-55:focus {
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 2px;
+.buttonLanding:focus {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 1px;
 }
 
 @media (min-width: 768px) {
